--- a/app/story/story.component.html
+++ b/app/story/story.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <app-message></app-message>
-  <app-message></app-message>
-  <app-message></app-message>
+  <app-message [messageGroup]='messageGroup'></app-message>
+  <app-message [messageGroup]='messageGroup'></app-message>
+  <app-message [messageGroup]='messageGroup'></app-message>
 </mat-card>
